# amplifier-collection-toolkit

./: MANIFEST.in  README.md  pyproject.toml
agents/: tool-builder.md
amplifier_collection_toolkit/: __init__.py  file_ops.py  pyproject.toml  session.py  validation.py
context/shared/: toolkit-patterns.md
docs/: BEST_PRACTICES.md  HOW_TO_CREATE_YOUR_OWN.md  METACOGNITIVE_RECIPES.md  PACKAGING_GUIDE.md  PHILOSOPHY.md  README.md  SCENARIO_TOOLS_GUIDE.md  TOOLKIT_GUIDE.md
profiles/: toolkit-dev.md
scenario-tools/blog-writer/: HOW_TO_BUILD.md  README.md  pyproject.toml
scenario-tools/blog-writer/src/blog_writer/: __init__.py  cli.py  library.py  pipeline.py  state.py  utils.py
scenario-tools/blog-writer/src/blog_writer/draft_writer/: __init__.py  core.py
scenario-tools/blog-writer/src/blog_writer/feedback_incorporator/: __init__.py  core.py
scenario-tools/blog-writer/src/blog_writer/source_reviewer/: __init__.py  core.py
scenario-tools/blog-writer/src/blog_writer/style_analyzer/: __init__.py  core.py
scenario-tools/blog-writer/src/blog_writer/style_reviewer/: __init__.py  core.py
scenario-tools/blog-writer/tests/: __init__.py  test_basic.py
scenario-tools/tutorial-analyzer/: HOW_TO_BUILD.md  README.md  pyproject.toml
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/: cli.py  library.py  main.py  pipeline.py  state.py  utils.py
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/analyzer/: core.py
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/critic/: core.py
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/diagnostician/: core.py
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/improver/: core.py
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/learner_simulator/: core.py
scenario-tools/tutorial-analyzer/src/tutorial_analyzer/synthesizer/: core.py
scenario-tools/tutorial-analyzer/tests/: test_orchestration.py
scenario-tools/tutorial-analyzer/tests/fixtures/: sample_tutorial.md
src/amplifier_collection_toolkit/: progress.py
templates/: README.md  standalone_tool.py
tests/: conftest.py
tests/test_e2e/: test_complete_flows.py
tests/test_integration/: test_file_operations.py  test_session_creation.py
tests/test_unit/: test_file_ops.py  test_progress.py  test_session.py  test_validation.py
