[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "1.0.0"
description = "Collection for building sophisticated CLI tools using metacognitive recipes with Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Amplifier Team", email = "amplifier@microsoft.com" }
]
dependencies = [
    "amplifier-core",
    "amplifier-module-resolution",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-toolkit"
Repository = "https://github.com/microsoft/amplifier-collection-toolkit"
Documentation = "https://github.com/microsoft/amplifier-collection-toolkit/tree/main/docs"
Issues = "https://github.com/microsoft/amplifier-collection-toolkit/issues"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.toml", "*.json", "*.yaml"]

[tool.amplifier.collection]
author = "Microsoft Amplifier Team"
capabilities = [
    "scenario-tool-development",
    "multi-config-patterns",
    "utilities",
    "metacognitive-recipes"
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-module-resolution = { git = "https://github.com/microsoft/amplifier-module-resolution", branch = "main" }
