[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit"
version = "1.0.0"
description = "Collection for building sophisticated CLI tools using metacognitive recipes with Amplifier"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.amplifier.collection]
author = "Microsoft Amplifier Team"
capabilities = [
    "scenario-tool-development",
    "multi-config-patterns",
    "utilities",
    "metacognitive-recipes"
]
