[project]
name = "blog-writer"
version = "1.0.0"
description = "Transform brain dumps into polished blog posts in your writing style"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Amplifier Team", email = "amplifier@microsoft.com" }
]

dependencies = [
    "click>=8.1.0",
    "amplifier-core",
    "toolkit",
    "amplifier-module-provider-anthropic",
    "amplifier-module-loop-streaming",
    "amplifier-module-loop-basic",
    "amplifier-module-context-simple",
]

[project.scripts]
blog-writer = "blog_writer.cli:cli"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-toolkit"
Repository = "https://github.com/microsoft/amplifier-collection-toolkit/tree/main/scenario-tools/blog-writer"
Documentation = "https://github.com/microsoft/amplifier-collection-toolkit/blob/main/scenario-tools/blog-writer/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_writer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-module-provider-anthropic = { git = "https://github.com/microsoft/amplifier-module-provider-anthropic", branch = "main" }
amplifier-module-loop-streaming = { git = "https://github.com/microsoft/amplifier-module-loop-streaming", branch = "main" }
amplifier-module-loop-basic = { git = "https://github.com/microsoft/amplifier-module-loop-basic", branch = "main" }
amplifier-module-context-simple = { git = "https://github.com/microsoft/amplifier-module-context-simple", branch = "main" }
toolkit = { git = "https://github.com/microsoft/amplifier-collection-toolkit", branch = "main" }
