[project]
name = "tutorial-analyzer"
version = "1.0.0"
description = "Multi-stage tutorial analyzer using metacognitive recipes - pedagogical exemplar for building sophisticated AI tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Amplifier Team", email = "amplifier@microsoft.com" }
]

dependencies = [
    "amplifier-core",
    "amplifier-collection-toolkit",
    "click>=8.1.0",
]

[project.scripts]
tutorial-analyzer = "tutorial_analyzer.main:main"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-toolkit"
Repository = "https://github.com/microsoft/amplifier-collection-toolkit/tree/main/scenario-tools/tutorial-analyzer"
Documentation = "https://github.com/microsoft/amplifier-collection-toolkit/blob/main/scenario-tools/tutorial-analyzer/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutorial_analyzer"]
