[project]
name = "tutorial-analyzer"
version = "1.0.0"
description = "Multi-stage tutorial analyzer using metacognitive recipes - pedagogical exemplar for building sophisticated AI tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Amplifier Team", email = "amplifier@microsoft.com" }
]

dependencies = [
    "amplifier-core",
    "amplifier-module-resolution",
    "toolkit",
    "click>=8.1.0",
]

[project.scripts]
tutorial-analyzer = "tutorial_analyzer.main:cli"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-toolkit"
Repository = "https://github.com/microsoft/amplifier-collection-toolkit/tree/main/scenario-tools/tutorial-analyzer"
Documentation = "https://github.com/microsoft/amplifier-collection-toolkit/blob/main/scenario-tools/tutorial-analyzer/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutorial_analyzer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-module-resolution = { git = "https://github.com/microsoft/amplifier-module-resolution", branch = "main" }
toolkit = { git = "https://github.com/microsoft/amplifier-collection-toolkit", branch = "main" }
