[project]
name = "tutorial-analyzer"
version = "1.0.0"
description = "Multi-stage tutorial analyzer using metacognitive recipes - pedagogical exemplar for building sophisticated AI tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Amplifier Team", email = "amplifier@microsoft.com" }
]

dependencies = [
    "amplifier-core",
    "amplifier-module-provider-anthropic",
    "amplifier-module-loop-streaming",
    "amplifier-module-loop-basic",
    "amplifier-module-context-simple",
]

[project.scripts]
tutorial-analyzer = "tutorial_analyzer.cli:cli"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-toolkit"
Repository = "https://github.com/microsoft/amplifier-collection-toolkit/tree/main/scenario-tools/tutorial-analyzer"
Documentation = "https://github.com/microsoft/amplifier-collection-toolkit/blob/main/scenario-tools/tutorial-analyzer/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutorial_analyzer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-module-provider-anthropic = { git = "https://github.com/microsoft/amplifier-module-provider-anthropic", branch = "main" }
amplifier-module-loop-streaming = { git = "https://github.com/microsoft/amplifier-module-loop-streaming", branch = "main" }
amplifier-module-loop-basic = { git = "https://github.com/microsoft/amplifier-module-loop-basic", branch = "main" }
amplifier-module-context-simple = { git = "https://github.com/microsoft/amplifier-module-context-simple", branch = "main" }
amplifier-collection-toolkit = { git = "https://github.com/microsoft/amplifier-collection-toolkit", branch = "main" }
